--- a/public/css/user-detail-page.css
+++ b/public/css/user-detail-page.css
@@ -167,3 +167,13 @@ h2 {
     position: relative;
     margin-right: 4px;
 }
+
+.empty-list{
+    background: rgb(237, 147, 2);
+    border-radius: 5px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    color: white;
+    font-size: 16px;
+    font-weight: 400;
+    padding: 16px;
+}
