--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,12 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+// @import 'create-nade.page.scss';
+// @import 'map-pages.scss';
+// @import 'secondary-pages-css.scss';
+// @import 'user-detail-page.scss';
+// @import 'video-detail-page.scss';
+// @import 'video-grid.scss';
+
+
