--- a/public/css/map-pages.css
+++ b/public/css/map-pages.css
@@ -269,7 +269,7 @@ li {
     max-width: 90vw;
     max-height: 90vh;
     width: 250px;
-    height: 300px;
+    height: 280px;
     background: rgb(245,245,245);
     color: rgb(66,66,66);
     display: flex;
@@ -323,6 +323,8 @@ li {
 
 .section{
     margin-bottom: 16px;
+    margin-left: 25px;
+    margin-top: 16px;
 }
 
 .modal-content{
@@ -347,4 +349,5 @@ li {
 .steam-login-wrapper-warning{
     display: flex;
     align-items: center;
+
 }
